css/modal.css
.modal-overlay {
    position: fixed;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    background: rgba(46, 47, 66, 0.4);
    display: flex;
    justify-content: center;
    align-items: center;
    pointer-events: none;
    opacity: 0;
    z-index: 999;
    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.modal-overlay.is-open {
    pointer-events: auto;
    opacity: 1;
}

.modal {
    background-color: #fcfcfc;
    border-radius: 4px;
    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
    max-width: 408px;
    max-height: 80%;
    padding: 24px;
    overflow-y: auto;
}

.modal-form {
    display: flex;
    flex-direction: column;
    gap: 24px;
}

.modal-close {
    color: #2e2f42;
    background-color: #e7e9fc;
    border: 1px solid rgba(0, 0, 0, 0.1);
    border-radius: 24px;
    width: 24px;
    height: 24px;
    align-self: flex-end;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.modal-close:hover, .modal-close:focus {
    background-color: #404bbf;
    color: #FFFFFF;
}

.modal-close-icon {

}

.modal-form-fieldset {
    display: flex;
    flex-direction: column;
    gap: 8px;
}

.modal-form-fieldset > :nth-last-child(3) {
    margin-bottom: 8px;
}

.modal-form-fieldset > :nth-last-child(2) {
    margin-bottom: 16px;
}

.modal-form-legend {
    font-weight: 500;
    line-height: 1.5;
    text-align: center;
    color: #2e2f42;
    margin-bottom: 16px;
}

.modal-form-field {
    display: flex;
    flex-direction: column;
    gap: 4px;
}

.modal-form-label, .modal-form-policy {
    font-size: 12px;
    line-height: 1.17;
    letter-spacing: 0.04em;
    color: #8e8f99;
    cursor: pointer;
}

.modal-form-input-wrapper {
    position: relative;
}

.modal-form-input-icon {
    position: absolute;
    top: 50%;
    left: 16px;
    transform: translateY(-50%);
    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.modal-form-input, .modal-form-textarea {
    border: 1px solid rgba(46, 47, 66, 0.4);
    border-radius: 4px;
    width: 100%;
    height: 40px;
    font-size: 12px;
    line-height: 1.17;
    letter-spacing: 0.04em;
    color: #2e2f42;
    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.modal-form-input {
    min-height: 40px;
    padding: 8px 38px;
}

.modal-form-textarea {
    min-height: 120px;
    padding: 8px 16px;
}

.modal-form-textarea::placeholder {
    font-size: 12px;
    line-height: 1.17;
    letter-spacing: 0.04em;
    color: rgba(46, 47, 66, 0.4);
}

.modal-form-input:focus, .modal-form-textarea:focus {
    outline: none;
    border-color: #4d5ae5;
}

.modal-form-input:focus + .modal-form-input-icon, .modal-form-textarea:focus + .modal-form-input-icon {
    color: #4d5ae5;
}


.modal-form-policy-field {

}

.modal-form-checkbox {
    margin-right: 4px;
}

.modal-form-policy {
    line-height: 1.33;
    text-decoration: underline;
    text-decoration-skip-ink: none;
    color: #4d5ae5;
}

.modal-form-checkbox + .modal-form-label {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 4px;
}

.modal-form-custom-checkbox {
    width: 16px;
    height: 16px;
    border: 1px solid rgba(46, 47, 66, 0.4);
    border-radius: 2px;
    margin-right: 4px;
    flex-shrink: 0;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    color: transparent;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.modal-form-checkbox:checked + .modal-form-label > .modal-form-custom-checkbox {
    background-color: #404bbf;
    border-color: #404bbf;
    color: #f4f4fd;
}

.modal-form-btn {
    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
    background: #4d5ae5;
    border-radius: 4px;
    padding: 16px 32px;
    width: 100%;
    max-width: 169px;
    font-weight: 500;
    line-height: 1.5;
    color: #fff;
    align-self: center;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.modal-form-btn:hover, .modal-form-btn:focus {
    background: #404bbf;
}

